--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@providers/*": ["./src/providers/*"],
       "@routes/*": ["./src/routes/*"],
       "@pages/*": ["./src/pages/*"],
-      "@constants/*": ["./src/constants/*"]
+      "@constants/*": ["./src/constants/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": ["src"],
